# transIt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  uninstall.bat  vcpkg.json
.github/workflows/: build.yml
docs/plans/: 2026-02-13-transIt-design.md  2026-02-13-transIt-implementation-plan.md
resources/: transIt.qrc  transIt.rc
src/: AIService.cpp  AIService.h  GeminiBackend.cpp  GeminiBackend.h  HotkeyManager.cpp  HotkeyManager.h  OpenAIBackend.cpp  OpenAIBackend.h  OverlayWindow.cpp  OverlayWindow.h  RegionSelector.cpp  RegionSelector.h  Settings.cpp  Settings.h  TrayApp.cpp  TrayApp.h  main.cpp
